# oh-my-code

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  ops_state.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: MERGE_RULES.md  OPS_GUIDE.md  pull_request_template.md
alembic/: env.py
app/: main.py
docs/: DASHBOARD_GUIDE.md  DASHBOARD_INSPECTION_REPORT.md  VISUALIZATION_CONSTITUTION.md  ai_governance_ops_baseline.md  checkpoint_2026-03-29.md  engine_layer_seal.md  execution_layer_seal.md  f01_production_freeze.md  f03_production_monitoring.md  final_completion_receipt.md  g01_staging_governance_integrity.md  governance_layer_seal.md  i02_runtime_verification.md  i03_prod_infrastructure_provision.md  law_audit.md  law_change_protocol.md  law_emergency_override.md  law_phase.md  notification_layer_seal.md  o01_operator_signoff.md  o02_staging_execution_receipt.md  o03_prod_operator_signoff.md  operational_runbook.md  p02_phase_transition_review.md  p03_phase_finalization.md  p04_phase_activation_review.md  p05_prod_readiness_review.md  p06_prod_activation_review.md  phase_definition.md  prod_configuration_guide.md  prod_operational_runbook.md  prod_rollback_override_procedure.md  retry_layer_final_seal.md  s01_staging_readiness_report.md  s02_staging_approval.md  s03_staging_stability_review.md  s04_staging_soak_test.md  staging_configuration_guide.md  staging_infrastructure_provision.md  system_final_constitution.md  (+17 more)
exchanges/: base.py  binance.py  bitget.py  factory.py  kis.py  kiwoom.py  okx.py  upbit.py
scripts/: autofix_loop.py  cr039_collection_monitor.py  cr046_stage_a_runner.py  cr048_create_prior_shadow_receipt.py  cr048_path_l_compat_lint.py  cr048_ri2b2c_session3_execute.py  cr048_ri2b2c_session4_rollback_drill.py  evaluate_results.py  evolution_loop.py  governance_check.py  indicator_backtest.py  inject_failure.py  m2_1_5_dryrun_test.py  m2_2_micro_live.py  ri1_shadow_observation.py  ri1a_threshold_alignment_remeasurement.py  run_dev.py  run_tests.py  shadow_run_cycle.py  start_server.sh  strategy_d_execution_sim.py  strategy_d_multi_asset.py  strategy_d_oos_validator.py  strategy_d_regime_filter.py  track_b_eth_research.py  track_b_failure_analysis.py  track_c_v2_regime_research.py  validate_system.py  verify_constitution.py
strategies/: base.py  example_strategy.py  rsi_strategy.py  smc_wavetrend_strategy.py
tests/: __init__.py  conftest.py  test_4state_regression.py  test_a01_constitution_audit.py  test_adapter_connections.py  test_adapters.py  test_adaptive_mutation.py  test_advanced_runner.py  test_agent_action_ledger.py  test_agent_governance.py  test_ai_assist_source.py  test_alert_summary.py  test_api.py  test_asset_model_stage2a.py  test_asset_registry.py  test_asset_service_phase2b.py  test_asset_validators.py  test_autonomous_orchestrator.py  test_b14_approval.py  test_b14_gate.py  test_b14_preflight.py  test_b23_ops_summary.py  test_backtest_qualification.py  test_backtesting_engine.py  test_blockage_summary.py  test_board_contract_governance.py  test_bootstrap.py  test_c01_ai_workspace.py  test_c02_loop_monitor_panel.py  test_c03_health_probes.py  test_c04_degraded_status.py  test_c04_manual_action_chain.py  test_c04_manual_action_codes.py  test_c04_manual_action_evidence_audit.py  test_c04_manual_action_execution.py  test_c04_manual_action_fail_closed.py  test_c04_manual_action_never_happen.py  (+176 more)
(+722 files in other folders)
